# sqlargon

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yaml  docker-compose.yaml  index.html  mkdocs.yaml  pyproject.toml  tox.ini
.github/workflows/: docs.yml  release.yml  tests.yaml  tests.yml
docs/: index.md  migrations.md
migrations/: index.html
search/: search_index.json
sqlargon/: __init__.py  database.py  db.py  exceptions.py  locks.py  mixins.py  orm.py  pagination.py  repository.py  settings.py  tracker.py  uow.py  util.py  utils.py
sqlargon/contrib/: fastapi.py
sqlargon/dialects/: sqlite.py
sqlargon/integrations/: fastapi.py
sqlargon/types/: __init__.py  datetime.py  json.py  pydantic.py  uuid.py
sqlaurum/: db.py  function_elements.py  orm.py  settings.py  types.py  util.py
sqlaurum/dialects/: postgres.py
sqlaurum/integrations/: fastapi.py
tests/: __init__.py  conftest.py  test_database.py  test_pagination.py  test_repository.py  test_uow.py
